--- a/Course Assignment Notebooks/section05_assignments.ipynb
+++ b/Course Assignment Notebooks/section05_assignments.ipynb
@@ -1173,24 +1173,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum() # Number of duplicated rows"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survey_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>number_of_children</th>\n",
+       "      <th>activity_level</th>\n",
+       "      <th>sleep_quality</th>\n",
+       "      <th>number_of_snoozes</th>\n",
+       "      <th>alarm_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6299</th>\n",
+       "      <td>6300</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>active</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6300</th>\n",
+       "      <td>6301</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6301</th>\n",
+       "      <td>6302</td>\n",
+       "      <td>41</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6302</th>\n",
+       "      <td>6303</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6303</th>\n",
+       "      <td>6304</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6428</th>\n",
+       "      <td>6362</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>active</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6429</th>\n",
+       "      <td>6363</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6430</th>\n",
+       "      <td>6364</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6431</th>\n",
+       "      <td>6365</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>active</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6432</th>\n",
+       "      <td>6366</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>lightly active</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>134 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      survey_id  age  number_of_children  activity_level  sleep_quality  \\\n",
+       "6299       6300   31                 2.0          active              5   \n",
+       "6300       6301   27                 2.0  lightly active              4   \n",
+       "6301       6302   41                 3.0  lightly active              5   \n",
+       "6302       6303   25                 0.0  lightly active              5   \n",
+       "6303       6304   25                 1.0  lightly active              5   \n",
+       "...         ...  ...                 ...             ...            ...   \n",
+       "6428       6362   27                 2.0          active              5   \n",
+       "6429       6363   31                 1.0  lightly active              4   \n",
+       "6430       6364   26                 0.0  lightly active              5   \n",
+       "6431       6365   27                 1.0          active              5   \n",
+       "6432       6366   18                 0.0  lightly active              4   \n",
+       "\n",
+       "      number_of_snoozes  alarm_rating  \n",
+       "6299                  0             3  \n",
+       "6300                  0             2  \n",
+       "6301                  0             2  \n",
+       "6302                  0             5  \n",
+       "6303                  0             2  \n",
+       "...                 ...           ...  \n",
+       "6428                  0             5  \n",
+       "6429                  0             4  \n",
+       "6430                  0             3  \n",
+       "6431                  0             3  \n",
+       "6432                  0             1  \n",
+       "\n",
+       "[134 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.duplicated(keep=False)] # Show duplicated rows"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.drop_duplicates(inplace=True) # Drop duplicated rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum() # Number of duplicated rows"
+   ]
   },
   {
    "cell_type": "markdown",
